# coy

./: .gitignore  CMakeLists.txt  README.md  test.acc
src/: Compiler.cpp  Compiler.h  main.cpp  test.cpp
src/backend/: RISCVGenerator.cpp  RISCVGenerator.h  RISCVStructure.cpp  RISCVStructure.h
src/frontend/: DataType.cpp  DataType.h  Lexer.cpp  Lexer.h  Node.cpp  Node.h  Parser.cpp  Parser.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  Token.cpp  Token.h
src/labs/: lab1.cpp  lab2.cpp  lab3.cpp  lab4(1).cpp  lab4.cpp
src/labs/tests/: mul.sy  op_priority1.sy
src/midend/: IRDataType.cpp  IRDataType.h  IRGenerator.cpp  IRGenerator.h  IRInstruction.cpp  IRInstruction.h  IRPrinter.cpp  IRPrinter.h  IRStructure.cpp  IRStructure.h  Value.cpp  Value.h
